[tool.pdm]
[tool.pdm.dev-dependencies]
dev = ["pre-commit<2.0,>=1.18"]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "cmus-osx"
version = "3.0.6"
authors = [{ name = "Philip Trauner", email = "philip.trauner@arztpraxis.io" }]
description = "Adds track change notifications, and media key support to cmus."
readme = "README.md"
license = { text = "MIT" }
requires-python = "<4.0,>=3.9"
dependencies = [
    "mutagen<2.0,>=1.42",
    "pyobjc>=10.3.1",
    "click<8.0,>=7.0",
    "Pillow<9.0,>=8.0",
]

[project.scripts]
cmus-osx = "cmus_osx:entrypoint"
